--- a/Data Analysis of Motorcycle Crash Data in Massachusetts/ReadMe
+++ b/Data Analysis of Motorcycle Crash Data in Massachusetts/ReadMe
@@ -1,3 +1,3 @@
-The CSV file Motorcycle_crashes_2010-2015 were orginally provided by Jenn Gazzillo, MassDOT Coordinator at UMAss and were directly given to me by Forest Bowlick
+The CSV file Motorcycle_crashes_2010-2015 were orginally provided by Jenn Gazzillo, MassDOT Coordinator at UMAss and were directly given to me by Forest Bowlick. This CSV file does not belong to me, for my data analysis reconstruction only, please contact MassDOT if you need to use this data in a offical capacity. 
 Metadata written by Bethany Bradleey 2/21/2019
-Spatial Town and State data was provided by MassGIS. 
+Spatial Town and State data was provided by MassGIS.
